[project]
name = "githubranger"
version = "2025.06.0"
description = "Python package for managing and automating tasks across multiple GitHub repositories."
readme = "README.md"
authors = [{ name = "Marijan Beg", email = "m.beg@imperial.ac.uk" }]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
license = "MIT"
keywords = [
    "github",
    "repositories",
    "automation",
    "higher education",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/teachnology/githubranger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.7.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",    # flake8
    "E",    # pycodestyle
    "W",    # pycodestyle (warnings)
    "N",    # pep8-naming
    "E501", # line too long - not enabled by default
    "UP",   # pyupgrade
    "I",    # isort
    "D",    # pydocstyle
    "PD",   # pandas-vet
    "PL",   # pylint
    "NPY",  # numpy
    "RUF",  # ruff
]
ignore = [
    "D100",    # Missing docstring in public module
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"tests/*" = ["D"]

[tool.coverage.run]
omit = ["tests/*.py"]

[tool.pytest.ini_options]
addopts = "-v -n auto --doctest-modules --cov=githubranger --cov-report=html --cov-report=term"
